--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -24,126 +24,142 @@
   </style>
 </head>
 <body>
-  <header><img src="ouassvtc.png" alt="Logo OuassVTC" /></header>
-  <div class="container">
-    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-    <div class="buttons">
-      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
-      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
-    </div>
-    <div class="info">
-      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
-    </div>
-    <form onsubmit="sendEmail(event)">
-      <input type="text" id="nom" placeholder="Nom" required />
-      <input type="tel" id="telephone" placeholder="Téléphone" required />
-      <input type="text" id="depart" placeholder="Adresse de départ (avec code postal et ville)" oninput="autocompleteAdresse('depart', this.value)" required />
-      <ul id="depart_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
-      <input type="text" id="arrivee" placeholder="Adresse d'arrivée (avec code postal et ville)" oninput="autocompleteAdresse('arrivee', this.value)" required />
-      <ul id="arrivee_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
-      <button type="button" onclick="geoLocaliser('arrivee')" style="margin-bottom:10px;">📍 Me localiser</button>
-      <input type="datetime-local" id="dateheure" required />
-      <textarea id="message" placeholder="Informations complémentaires"></textarea>
-      <div id="prixEstime" class="estimation"></div>
-      <button type="submit">Envoyer la demande</button>
-    </form>
+<header>
+  <img src="ouassvtc.png" alt="Logo OuassVTC" />
+</header>
 
-    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+<div class="container">
+  <img src="voiture.png" alt="Voiture VTC" class="car-image" />
+
+  <div class="buttons">
+    <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
+    <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+    <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
+    <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
+    <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
   </div>
 
-  <footer>© 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.</footer>
-
-  <div class="hidden-keywords">
-    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+  <div class="info">
+    OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
   </div>
 
-  <script>
-    emailjs.init("U08QGWWRUenJDOllc");
+  <form onsubmit="sendEmail(event)">
+    <input id="nom" placeholder="Nom" required type="text" />
+    <input id="telephone" placeholder="Téléphone" required type="tel" />
+    <div style="display: flex; align-items: center; gap: 5px;">
+      <input id="depart" oninput="autocompleteAdresse('depart', this.value)" placeholder="Adresse de départ (code postal et ville obligatoires)" required type="text"/>
+      <button onclick="geoLocaliser('depart')" type="button">📍</button>
+    </div>
+    <ul id="depart_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
+    
+    <input id="arrivee" oninput="autocompleteAdresse('arrivee', this.value)" placeholder="Adresse d'arrivée (code postal et ville obligatoires)" required type="text"/>
+    <ul id="arrivee_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
 
-    function sendEmail(event) {
-      event.preventDefault();
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      const prix = document.getElementById("prixEstime").innerText;
+    <input id="dateheure" required type="datetime-local" />
+    <textarea id="message" placeholder="Informations complémentaires"></textarea>
+    
+    <div class="estimation" id="prixEstime"></div>
+    <button type="submit">Envoyer la demande</button>
+  </form>
 
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-        nom: document.getElementById("nom").value,
-        telephone: document.getElementById("telephone").value,
-        dateheure: document.getElementById("dateheure").value,
-        depart,
-        arrivee,
-        message: document.getElementById("message").value + "\n\n" + prix
-      })
-      .then(() => alert("Votre demande a bien été envoyée !"))
-      .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
-    }
+  <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+</div>
 
-    function estimateDistance() {
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      if (!depart || !arrivee) return;
-      const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
-      fetch(url)
-        .then(res => res.json())
-        .then(data => {
-          if (data.routes && data.routes.length) {
-            const distanceKm = data.routes[0].distance / 1000;
-            const distanceArrondie = Math.max(distanceKm, 7);
-            const prix = Math.max(20, distanceArrondie * 1.6);
-            document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-          }
-        });
-    }
+<footer>
+  © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
+</footer>
 
-    document.getElementById("depart").addEventListener("blur", estimateDistance);
-    document.getElementById("arrivee").addEventListener("blur", estimateDistance);
+<div class="hidden-keywords">
+  Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+</div>
 
-    function geoLocaliser(champId) {
-      if (!navigator.geolocation) {
-        alert("La géolocalisation n'est pas prise en charge.");
-        return;
-      }
-      navigator.geolocation.getCurrentPosition((position) => {
-        const { latitude, longitude } = position.coords;
-        fetch(`https://nominatim.openstreetmap.org/reverse?lat=${latitude}&lon=${longitude}&format=json`)
-          .then(response => response.json())
-          .then(data => {
-            document.getElementById(champId).value = data.display_name;
-            estimateDistance();
-          });
+<script>
+  emailjs.init("U08QGWWRUenJDOllc");
+
+  function sendEmail(event) {
+    event.preventDefault();
+    const depart = document.getElementById("depart").value;
+    const arrivee = document.getElementById("arrivee").value;
+    const prix = document.getElementById("prixEstime").innerText;
+
+    emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+      nom: document.getElementById("nom").value,
+      telephone: document.getElementById("telephone").value,
+      dateheure: document.getElementById("dateheure").value,
+      depart,
+      arrivee,
+      message: document.getElementById("message").value + "\n\n" + prix
+    })
+    .then(() => alert("Votre demande a bien été envoyée !"))
+    .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
+  }
+
+  function estimateDistance() {
+    const depart = document.getElementById("depart").value;
+    const arrivee = document.getElementById("arrivee").value;
+    if (!depart || !arrivee) return;
+
+    const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
+    fetch(url)
+      .then(res => res.json())
+      .then(data => {
+        if (data.routes && data.routes.length) {
+          const distanceKm = data.routes[0].distance / 1000;
+          const distanceArrondie = Math.max(distanceKm, 7);
+          const prix = Math.max(20, distanceArrondie * 1.6);
+          document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+        }
       });
-    }
+  }
 
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({ pageLanguage: 'fr' }, 'google_translate_element');
-    }
+  document.getElementById("depart").addEventListener("blur", estimateDistance);
+  document.getElementById("arrivee").addEventListener("blur", estimateDistance);
 
-    function autocompleteAdresse(champId, query) {
-      if (query.length < 3) return;
-      fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}`)
+  function autocompleteAdresse(id, query) {
+    const listId = id + "_suggestions";
+    const suggestions = document.getElementById(listId);
+    suggestions.innerHTML = "";
+    if (query.length < 3) return;
+    fetch(`https://photon.komoot.io/api/?q=${encodeURIComponent(query)}&limit=5`)
+      .then(res => res.json())
+      .then(data => {
+        data.features.forEach(feature => {
+          const li = document.createElement("li");
+          li.textContent = feature.properties.name + ", " + (feature.properties.city || '') + " " + (feature.properties.postcode || '');
+          li.style.cursor = "pointer";
+          li.onclick = () => {
+            document.getElementById(id).value = li.textContent;
+            suggestions.innerHTML = "";
+            estimateDistance();
+          };
+          suggestions.appendChild(li);
+        });
+      });
+  }
+
+  function geoLocaliser(id) {
+    if (!navigator.geolocation) {
+      alert("La géolocalisation n'est pas supportée.");
+      return;
+    }
+    navigator.geolocation.getCurrentPosition(pos => {
+      const lat = pos.coords.latitude;
+      const lon = pos.coords.longitude;
+      fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
         .then(res => res.json())
         .then(data => {
-          const suggestions = data.slice(0, 5);
-          const list = document.getElementById(champId + "_suggestions");
-          list.innerHTML = "";
-          suggestions.forEach(s => {
-            const li = document.createElement("li");
-            li.textContent = s.display_name;
-            li.style.cursor = "pointer";
-            li.onclick = () => {
-              document.getElementById(champId).value = s.display_name;
-              list.innerHTML = "";
-              estimateDistance();
-            };
-            list.appendChild(li);
-          });
+          document.getElementById(id).value = data.display_name;
+          estimateDistance();
         });
-    }
-  </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    }, () => alert("Impossible de récupérer votre position."));
+  }
+
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+  }
+</script>
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
+
 
