--- a/index.html
+++ b/index.html
@@ -1,165 +1,203 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BG2J1H8TC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-5BG2J1H8TC');
+  </script>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f5f5f5; color: #333; margin: 0; padding: 0; }
-    header { background-color: #000; padding: 20px; text-align: center; }
-    header img { height: 140px; }
-    .container { padding: 20px; max-width: 900px; margin: auto; }
-    .car-image { width: 100%; max-width: 450px; display: block; margin: 0 auto 20px auto; }
-    .buttons { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 20px; }
-    .buttons a { display: flex; align-items: center; gap: 5px; background-color: #000; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none; }
-    .buttons a img { width: 20px; height: 20px; }
-    .info { text-align: center; font-weight: bold; margin-bottom: 20px; }
-    form { display: flex; flex-direction: column; gap: 10px; max-width: 500px; margin: 20px auto; }
-    input, textarea { padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
-    button { padding: 10px; background-color: #007bff; color: white; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
-    .estimation { text-align: center; font-weight: bold; margin-top: 10px; }
-    footer { background-color: #000; color: white; text-align: center; padding: 30px 10px; margin-top: 40px; }
-    .hidden-keywords { display: none; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #000;
+      padding: 20px;
+      text-align: center;
+    }
+    header img {
+      height: 140px;
+    }
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .car-image {
+      width: 100%;
+      max-width: 450px;
+      display: block;
+      margin: 0 auto 20px auto;
+    }
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .buttons a {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      background-color: #000;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    .buttons a img {
+      width: 20px;
+      height: 20px;
+    }
+    .info {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+    input, textarea {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      padding: 10px;
+      background-color: #007bff;
+      color: white;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .estimation {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    footer {
+      background-color: #000;
+      color: white;
+      text-align: center;
+      padding: 30px 10px;
+      margin-top: 40px;
+    }
+    .hidden-keywords {
+      display: none;
+    }
   </style>
 </head>
 <body>
-<header>
-  <img src="ouassvtc.png" alt="Logo OuassVTC" />
-</header>
+  <header>
+    <img src="ouassvtc.png" alt="Logo OuassVTC" />
+  </header>
 
-<div class="container">
-  <img src="voiture.png" alt="Voiture VTC" class="car-image" />
+  <div class="container">
+    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
 
-  <div class="buttons">
-    <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-    <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
-    <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
-    <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-    <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
-  </div>
-
-  <div class="info">
-    OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
-  </div>
-
-  <form onsubmit="sendEmail(event)">
-    <input id="nom" placeholder="Nom" required type="text" />
-    <input id="telephone" placeholder="Téléphone" required type="tel" />
-    <div style="display: flex; align-items: center; gap: 5px;">
-      <input id="depart" oninput="autocompleteAdresse('depart', this.value)" placeholder="Adresse de départ (code postal et ville obligatoires)" required type="text"/>
-      <button onclick="geoLocaliser('depart')" type="button">📍</button>
+    <div class="buttons">
+      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
+      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
     </div>
-    <ul id="depart_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
-    
-    <input id="arrivee" oninput="autocompleteAdresse('arrivee', this.value)" placeholder="Adresse d'arrivée (code postal et ville obligatoires)" required type="text"/>
-    <ul id="arrivee_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
 
-    <input id="dateheure" required type="datetime-local" />
-    <textarea id="message" placeholder="Informations complémentaires"></textarea>
-    
-    <div class="estimation" id="prixEstime"></div>
-    <button type="submit">Envoyer la demande</button>
-  </form>
+    <div class="info">
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
+    </div>
 
-  <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
-</div>
+    <h2 style="text-align:center;">Formulaire de réservation</h2>
+    <form onsubmit="sendEmail(event)">
+      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" max="7" required />
+      <input type="text" id="nom" name="nom" placeholder="Nom" required />
+      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
+      <input type="text" id="depart" name="depart" placeholder="Adresse de départ avec code postal et ville" required />
+      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée avec code postal et ville" required />
+      <input type="datetime-local" id="dateheure" name="dateheure" required />
+      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+      <div class="estimation" id="prixEstime"></div>
+      <button type="submit">Envoyer la demande</button>
+    </form>
 
-<footer>
-  © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
-</footer>
+    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+  </div>
 
-<div class="hidden-keywords">
-  Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
-</div>
+  <footer>
+    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
+  </footer>
 
-<script>
-  emailjs.init("U08QGWWRUenJDOllc");
+  <div class="hidden-keywords">
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+  </div>
 
-  function sendEmail(event) {
-    event.preventDefault();
-    const depart = document.getElementById("depart").value;
-    const arrivee = document.getElementById("arrivee").value;
-    const prix = document.getElementById("prixEstime").innerText;
+  <script type="text/javascript">
+    emailjs.init("U08QGWWRUenJDOllc");
 
-    emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-      nom: document.getElementById("nom").value,
-      telephone: document.getElementById("telephone").value,
-      dateheure: document.getElementById("dateheure").value,
-      depart,
-      arrivee,
-      message: document.getElementById("message").value + "\n\n" + prix
-    })
-    .then(() => alert("Votre demande a bien été envoyée !"))
-    .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
-  }
+    function sendEmail(event) {
+      event.preventDefault();
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      const prix = document.getElementById("prixEstime").innerText;
 
-  function estimateDistance() {
-    const depart = document.getElementById("depart").value;
-    const arrivee = document.getElementById("arrivee").value;
-    if (!depart || !arrivee) return;
-
-    const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
-    fetch(url)
-      .then(res => res.json())
-      .then(data => {
-        if (data.routes && data.routes.length) {
-          const distanceKm = data.routes[0].distance / 1000;
-          const distanceArrondie = Math.max(distanceKm, 7);
-          const prix = Math.max(20, distanceArrondie * 1.6);
-          document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-        }
-      });
-  }
-
-  document.getElementById("depart").addEventListener("blur", estimateDistance);
-  document.getElementById("arrivee").addEventListener("blur", estimateDistance);
-
-  function autocompleteAdresse(id, query) {
-    const listId = id + "_suggestions";
-    const suggestions = document.getElementById(listId);
-    suggestions.innerHTML = "";
-    if (query.length < 3) return;
-    fetch(`https://photon.komoot.io/api/?q=${encodeURIComponent(query)}&limit=5`)
-      .then(res => res.json())
-      .then(data => {
-        data.features.forEach(feature => {
-          const li = document.createElement("li");
-          li.textContent = feature.properties.name + ", " + (feature.properties.city || '') + " " + (feature.properties.postcode || '');
-          li.style.cursor = "pointer";
-          li.onclick = () => {
-            document.getElementById(id).value = li.textContent;
-            suggestions.innerHTML = "";
-            estimateDistance();
-          };
-          suggestions.appendChild(li);
-        });
-      });
-  }
-
-  function geoLocaliser(id) {
-    if (!navigator.geolocation) {
-      alert("La géolocalisation n'est pas supportée.");
-      return;
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+        nom: document.getElementById("nom").value,
+        telephone: document.getElementById("telephone").value,
+        dateheure: document.getElementById("dateheure").value,
+        depart,
+        arrivee,
+        passagers: document.getElementById("passagers").value,
+        message: document.getElementById("message").value + "\n\n" + prix
+      })
+      .then(() => alert("Votre demande a bien été envoyée !"))
+      .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
     }
-    navigator.geolocation.getCurrentPosition(pos => {
-      const lat = pos.coords.latitude;
-      const lon = pos.coords.longitude;
-      fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
+
+    document.getElementById("depart").addEventListener("blur", estimateDistance);
+    document.getElementById("arrivee").addEventListener("blur", estimateDistance);
+
+    function estimateDistance() {
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      if (!depart || !arrivee) return;
+
+      const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
+      fetch(url)
         .then(res => res.json())
         .then(data => {
-          document.getElementById(id).value = data.display_name;
-          estimateDistance();
+          if (data.routes && data.routes.length) {
+            const distanceKm = data.routes[0].distance / 1000;
+            const distanceArrondie = Math.max(distanceKm, 7);
+            const prix = Math.max(20, distanceArrondie * 1.6);
+            document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+          }
         });
-    }, () => alert("Impossible de récupérer votre position."));
-  }
+    }
 
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
-  }
-</script>
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+    }
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
+
 
 
